adds Google Fonts stylesheet and adds class to banner img

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -8,8 +8,8 @@
     <!-- Google Font links added before CSS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Montserrat:wght@300&display=swap"
-        rel="stylesheet">
+    <!-- Google Fonts Stylesheet -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <!-- Icons Stylesheet -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Reset stylesheet -->
@@ -23,9 +23,8 @@
     <!-- Header with navigation bar, banner image, and contact button -->
     <header>
         <nav class="wrapper">
-            <img src="images/logo.png" alt="Three Star Media logo">
             <ul>
-                <li class="nav-item"><a href="#">Home</a></li>
+                <li class="nav-item"><a href="#"><img src="images/logo.png" alt="Three Star Media logo">Home</a></li>
                 <li class="nav-item"><a href="#">About Us</a></li>
                 <li class="nav-item"><a href="#">Services</a></li>
                 <li class="nav-item"><a href="#">Team</a></li>
@@ -37,8 +36,8 @@
                 <button type="submit"><i class="fa fa-search"></i></button>
             </form>
         </nav>
-        <img src="images/main-banner.jpg" alt="wide image of a workplace">
-        <div class="wrapper">
+        <img class=banner src="images/main-banner.jpg" alt="wide image of a workplace">
+        <div class="wrapper welcome">
             <h1>Welcome to Three Star Media</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt culpa, ab reiciendis atque odio, deleniti
                 quo est ducimus, voluptatibus unde dolores repellendus eveniet perspiciatis quisquam similique explicabo!
@@ -109,7 +108,7 @@
             </div>
         </div>
         <div class="wrapper our-vision">
-            <img src="images/vision.jpg" alt="origami boats">
+            <!-- <img src="images/vision.jpg" alt="origami boats"> -->
             <div>
                 <h3>Our Vision</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, voluptas quasi voluptates
