creates welcome class

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -37,12 +37,14 @@
             </form>
         </nav>
         <img class=banner src="images/main-banner.jpg" alt="wide image of a workplace">
-        <div class="wrapper welcome">
-            <h1>Welcome to Three Star Media</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt culpa, ab reiciendis atque odio, deleniti
-                quo est ducimus, voluptatibus unde dolores repellendus eveniet perspiciatis quisquam similique explicabo!
-                Reiciendis, et dolorem.</p>
-            <button type="button">Connect with us <i class="fa fa-caret-right"></i></button>
+        <div class="wrapper welcome-background">
+            <div class="welcome">
+                <h1>Welcome to Three Star Media</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt culpa, ab reiciendis atque odio, deleniti
+                    quo est ducimus, voluptatibus unde dolores repellendus eveniet perspiciatis quisquam similique explicabo!
+                    Reiciendis, et dolorem.</p>
+                <button type="button">Connect with us <i class="fa fa-caret-right"></i></button>
+            </div>
         </div>
     </header>
     <!-- Main section containing 11 sections, including buttons, a form, map and table -->
