comments out banner img

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -36,7 +36,7 @@
                 <button type="submit"><i class="fa fa-search"></i></button>
             </form>
         </nav>
-        <img class=banner src="images/main-banner.jpg" alt="wide image of a workplace">
+        <!-- <img class=banner src="images/main-banner.jpg" alt="wide image of a workplace"> -->
         <div class="wrapper welcome-background">
             <div class="welcome">
                 <h1>Welcome to Three Star Media</h1>
