updates contact form class

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -145,9 +145,9 @@
         <!-- Contact form with three text boxes and submit button -->
         <div class="wrapper contact-us">
             <h2>Contact Us</h2>
-            <div class="form">
+            <div class="contact-form">
                 <h3>Send us a message</h3>
-                <form action="#" method="get" class="contact">
+                <form action="#" method="get">
                     <div>
                         <label for="name">Full Name</label>
                         <input type="text" id="name" name="name">
