--- a/final-project/index.html
+++ b/final-project/index.html
@@ -160,7 +160,7 @@
                         <label for="msg">Message</label>
                         <textarea id="msg" name="msg"></textarea>
                     </div>
-                    <div class="submit-button">
+                    <div>
                         <input type="submit" value="Send">
                     </div>
                 </form>
