adds classes to paragraphs

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -5,11 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Google Font links added before CSS -->
+    <!-- Google Fonts Stylesheet -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- Google Fonts Stylesheet -->
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <!-- Icons Stylesheet -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Reset stylesheet -->
@@ -126,26 +125,25 @@
             <div class="john">
                 <img src="images/john.jpg" alt="portrait photo of John Doe">
                 <h3>John Doe</h3>
-                <p>CEO and Co-owner</p>
+                <p class="subtitle">CEO and Co-owner</p>
                 <hr>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A ratione nisi corporis consectetur,
+                <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. A ratione nisi corporis consectetur,
                     reprehenderit ad deserunt? Eos, voluptate. Dignissimos iste molestiae fugiat eos totam, laudantium
                     quod voluptate! Quia, vel beatae!</p>
             </div>
             <div class="bob">
                 <img src="images/bob.jpg" alt="portrait photo of Bob Rite">
                 <h3>Bob Rite</h3>
-                <p>CFO and Co-owner</p>
+                <p class="subtitle">CFO and Co-owner</p>
                 <hr>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A ratione nisi corporis consectetur,
-                    reprehenderit ad deserunt? Eos, voluptate. Dignissimos iste molestiae fugiat eos totam, laudantium
+                <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. A ratione nisi corporis consectetur, reprehenderit ad deserunt? Eos, voluptate. Dignissimos iste molestiae fugiat eos totam, laudantium
                     quod voluptate! Quia, vel beatae!</p>
             </div>
         </div>
         <!-- Contact form with three text boxes and submit button -->
         <div class="wrapper contact-us">
             <h2>Contact Us</h2>
-            <div class="contact-form">
+            <div>
                 <h3>Send us a message</h3>
                 <form action="#" method="get">
                     <div>
@@ -161,7 +159,7 @@
                         <textarea id="msg" name="msg"></textarea>
                     </div>
                     <div>
-                        <input type="submit" value="Send">
+                        <button type="submit">Send</button>
                     </div>
                 </form>
             </div>
